finalização do minicrud